<resources>
    <string name="app_name">QRScannerApp</string>
    <string name="qrcodescanner">QRCodeScanner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_message">Error</string>
    <string name="street_name">Street:</string>
    <string name="city_area_name">City Area:</string>
    <string name="city_type_name">City Type:</string>
    <string name="region_name">Region:</string>
    <string name="flat_name">Flat:</string>
    <string name="block_name">Block:</string>
    <string name="house_num">House:</string>
    <string name="region_kl_id">Region Kl. Id:</string>
    <string name="apartment_num">Apartment:</string>
    <string name="comment">Comment:</string>
    <string name="cargo_elevator">Cargo Elevator:</string>
    <string name="intercom">Intercom:</string>
    <string name="floor_num">Floor:</string>
    <string name="entrance">Entrance:</string>
    <string name="detached_house">Detached House:</string>
    <string name="access">Access:</string>
    <string name="postal_code">Postal Code:</string>
    <string name="source">Source:</string>
    <string name="address">Address:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="customer_full_name">Customer Full Name:</string>
    <string name="customer">Customer:</string>
    <string name="order_id">ID:</string>
    <string name="externalhwb">externalHWB</string>
    <string name="internalhwb">internalHWB</string>
    <string name="quantity">quantity</string>
    <string name="final_price">final price</string>
    <string name="price">price</string>
    <string name="item_nsme">item nsme</string>
    <string name="offer_id">offer id</string>
    <string name="item_id">item id</string>
    <string name="ordered_item">Ordered Item</string>
    <string name="qr_code_picture">QR Code Picture</string>
</resources>